entrega pec 3